config/ghost-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  ports:
  - port: 80
    targetPort: 2368
  selector:
    app: ghost
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - bitrot.in
    - blog.bitrot.in
    secretName: bitrot-tls
  rules:
  - host: bitrot.in
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost
          servicePort: 80
